Adding more stuff, testing more.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 	font-family: Arial, sans-serif;
 	text-align: center;
 	}
+	
+	a{
+	color: #c587ff;	
+	text-decoration: none;	
+	}	
 	</style>
 </head>
 <body>
   <h1>Cifronium</h1>
 	<p>Welcome to my deposit of drawings and other things of mine.</p>
+  <h1>Drawings</h1>
+     <h2>Cockroach on the Sink</h1>
+	<p>December 05, 2022</p>
+     <img src="https://cifronium.github.io/drawings/cockroachonthesink.png">
+	<p><strong>Oldest thing you will find here, posted the same day this site was set up, minutes after that.</strong></p>
+	<p>This is a tiny drawing I made in MS. Paint, I was inspired from seeing cockroaches pass by the bathroom sink.</p>
 </body>
 </html>
