--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   <h1>Cifronium</h1>
 	<p>Welcome to my deposit of drawings and other things of mine.</p>
   <h1>Drawings</h1>
-     <h2>Cockroach on the Sink</h1>
+     <h2>Poc Duck</h2>
+	<p>December 12, 2022</p>
+     <img src="https://cifronium.github.io/drawings/pocduck.png">
+	<p>This tiny drawing made in MS. Paint is a little tribute to a duck species, in my country, that has been extinct since 1989.</p>
+     <h2>Cockroach on the Sink</h2>
 	<p>December 05, 2022</p>
      <img src="https://cifronium.github.io/drawings/cockroachonthesink.png">
 	<p><strong>Oldest thing you will find here, posted the same day this site was set up, minutes after that.</strong></p>
