--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <h1>Cifronium</h1>
 	<p>Welcome to my deposit of drawings and other things of mine.</p>
   <h1>Drawings</h1>
+     <h2>Snowspouses</h2>
+	<p>January 02, 2023</p>
+     <img src="https://cifronium.github.io/drawings/snowspouses.png">
+	<p>A slightly weird idea I had since a few weeks ago, there isn't much to say about it other than the fact it solely uses shades and tints of the same turquoise and red.</p>	
      <h2>Poc Duck</h2>
 	<p>December 12, 2022</p>
      <img src="https://cifronium.github.io/drawings/pocduck.png">
