--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <h1>Cifronium</h1>
 	<p>Welcome to my deposit of drawings and other things of mine.</p>
   <h1>Drawings</h1>
+     <h2>Two Gooey Friends</h2>
+	<p>February 09, 2023</p>
+     <img src="https://cifronium.github.io/drawings/twogooeyfriends.png">
+	<p>This is a drawing I made to showcase the pair of simple characters in it.</p>		
      <h2>Snowspouses</h2>
 	<p>January 02, 2023</p>
      <img src="https://cifronium.github.io/drawings/snowspouses.png">
