--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <h1>Cifronium</h1>
 	<p>Welcome to my deposit of drawings and other things of mine.</p>
   <h1>Drawings</h1>
+     <h2>Aquatic Weaponry</h2>
+	<p>April 03, 2023</p>
+     <img src="https://cifronium.github.io/drawings/aquaticweaponry.png">
+	<p>The smallest and most simple drawing I have done yet, it uses the color palette from Master System.</p>			
      <h2>Two Gooey Friends</h2>
 	<p>February 09, 2023</p>
      <img src="https://cifronium.github.io/drawings/twogooeyfriends.png">
